[package]
name = "graphql-cli-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0"
async-graphql-parser = "7.0"
http = "1.1"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenvy = "0.15"
tokio-tungstenite = { version = "0.24", features = ["rustls"] }
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4"] }
humantime = "2.1"
